# github-stars-contrib-mcp-server

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  env.template  pyproject.toml  pyright.json
.github/: copilot-instructions.md
.github/hooks/: check-api-safety.py  smart-filter.py
.github/workflows/: tests.yml
scripts/: demo.py  list_contribs.py  quality_check.py
src/github_stars_contrib_mcp/: __init__.py  config.py  models.py  server.py  shared.py
src/github_stars_contrib_mcp/application/: __init__.py
src/github_stars_contrib_mcp/application/use_cases/: __init__.py  create_contribution.py  create_contributions.py  create_link.py  delete_contribution.py  delete_link.py  get_stars.py  get_user.py  get_user_data.py  update_contribution.py  update_link.py  update_profile.py
src/github_stars_contrib_mcp/config/: __init__.py  settings.py
src/github_stars_contrib_mcp/di/: __init__.py  container.py
src/github_stars_contrib_mcp/domain/: __init__.py
src/github_stars_contrib_mcp/domain/ports/: __init__.py  stars_api.py
src/github_stars_contrib_mcp/infrastructure/: __init__.py
src/github_stars_contrib_mcp/infrastructure/adapters/: __init__.py  stars_api_graphql.py
src/github_stars_contrib_mcp/middleware/: __init__.py  error_handler.py  observability_middleware.py  request_context.py
src/github_stars_contrib_mcp/observability/: __init__.py  metrics.py  tracing.py
src/github_stars_contrib_mcp/resilience/: __init__.py  circuit_breaker.py
src/github_stars_contrib_mcp/tools/: __init__.py  compare_contributions.py  create_contribution.py  create_contributions.py  create_link.py  delete_contributions.py  delete_link.py  export_contributions.py  get_contributions_stats.py  get_stars.py  get_user.py  get_user_data.py  metrics.py  search_contributions.py  update_contributions.py  update_link.py  update_profile.py
src/github_stars_contrib_mcp/tools/profile/: __init__.py  get_user_data_tool.py
src/github_stars_contrib_mcp/utils/: __init__.py  models.py  normalization.py  plotly_charts.py  queries.py  stars_client.py  svg_charts.py  url_check.py
tests/: conftest.py  test_create_contributions.py  test_get_user_data.py
tests/integration/: conftest.py  test_contributions_e2e.py  test_integration_utils.py  test_links_e2e.py  test_phase3_integration.py  test_profile_e2e.py  test_read_operations.py  test_tools_contributions_e2e.py  test_tools_links_e2e.py  test_tools_profile_e2e.py  test_tools_read_only.py
tests/integration/infrastructure/: test_stars_api_adapter.py
tests/unit/: test_config.py  test_create_contribution.py  test_create_contributions.py  test_create_link.py  test_delete_contributions.py  test_delete_link.py  test_get_stars.py  test_get_user.py  test_get_user_data.py  test_infrastructure_stars_api_adapter.py  test_models.py  test_search_contributions.py  test_server.py  test_shared.py  test_shared_token_validation.py  test_stars_client.py  test_stars_client_logging.py  test_tools_url_validation.py  test_update_contributions.py  test_update_link.py  test_update_profile.py  test_url_check.py  test_utils_models_apiresult.py  test_utils_stars_client_execute_graphql.py
tests/unit/application/: test_get_stars_use_case.py  test_get_user_data_use_case.py  test_get_user_use_case.py
tests/unit/di/: test_container.py
tests/unit/middleware/: test_error_handler.py
tests/unit/observability/: test_circuit_breaker.py  test_metrics.py  test_tracing.py
tests/unit/tools/: test_advanced_features.py
tests/unit/tools/profile/: test_get_user_data_tool.py
tests/unit/utils/: test_svg_charts.py
